--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <body>
     <header><a class="link" href="index.html">Music</a></header>
     <nav>
-      <a class="link" href="quiz.html">Take a Quiz</a
-      ><a class="link" href="randomizer.html">Music Randomizer</a>
+      <a class="link" href="randomizer.html">Music Randomizer</a>
     </nav>
 
     <h2>Music Recomendations</h2>
