--- a/randomizer.html
+++ b/randomizer.html
@@ -19,19 +19,37 @@
   <body>
     <header><a class="link" href="index.html">Music</a></header>
     <nav>
-      <a class="link" href="quiz.html">Take a Quiz</a
-      ><a class="link" href="randomizer.html">Music Randomizer</a>
+      <a class="link" href="randomizer.html">Music Randomizer</a>
     </nav>
     <h2>Music Randomizer</h2>
 
     <button type="button" class="random-btn">Play random song</button>
 
-    <p>Songs that you can get</p>
+    <p class="songtext">Songs that you can get</p>
 
     <ul>
       <li class="songtext">
         <p>1. God's Warrior - Tee Grizzley</p>
-        <img src="bilder/godswarrior.jpg" width="60%" />
+      </li>
+      <li class="songPick"><img src="bilder/godswarrior.jpg" width="60%" /></li>
+
+      <li class="songtext">
+        <p>2. 20min - Lil Uzi</p>
+      </li>
+      <li class="songPick"><img src="bilder/20min.jpg" width="60%" /></li>
+
+      <li class="songtext">
+        <p>3. SOLVED THE PROBLEM - Comethazine</p>
+      </li>
+      <li class="songPick">
+        <img src="bilder/solveproblem.jpg" width="60%" />
+      </li>
+
+      <li class="songtext">
+        <p>4. wokeuplikethis* - Playboi Carti</p>
+      </li>
+      <li class="songPick">
+        <img src="bilder/wokeup.jpg" width="60%" />
       </li>
     </ul>
 
